--- a/view/footer.twig
+++ b/view/footer.twig
@@ -7,7 +7,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBat8OxH_KTcV0aaImXgsor7aOwX1RApws"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBat8OxH_KTcV0aaImXgsor7aOwX1RApws"></script>
     <script src="js/jquery.masonry.min.js"></script> 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/google-maps.js"></script> 
