--- a/view/content.twig
+++ b/view/content.twig
@@ -23,7 +23,7 @@
             <h2 class="service" itemprop="about">
                 <span class="glyphicon glyphicon-ok"></span>
                 Diensten
-                <i class="download-cv"><a href="#"><span class="glyphicon glyphicon-download-alt"></span></a></i>
+                <i class="download-cv"><a href="https://www.puddinq.mobi/wip/stefan-schotvanger/CV-Stefan-Schotvanger.doc"><span class="glyphicon glyphicon-download-alt"></span></a></i>
             </h2>
             <p itemprop="description">
                 <span class="glyphicon glyphicon-hand-right"></span>
