added anand to portfolio

--- a/view/content.twig
+++ b/view/content.twig
@@ -297,7 +297,7 @@
 
                     <img src="img/puddinq.JPG" alt="puddinq">
                     <p class="portfolio-links">
-                        <a href="http://www.puddinq.mobi" target="_blank">
+                        <a href="https://www.puddinq.mobi" target="_blank">
                             <i class="fa fa-copyright"></i>&nbsp;puddinq.mobi
                         </a>
                     </p>
@@ -309,25 +309,12 @@
                     <img src="img/CV.png" alt="stefan schotvanger cv">
                 </div>
             </div>
+            
             <div class="portfolio-item">
-
                 <div class="portfolio-details">
-                    <h4>Puddinq.mobi</h4>
-                    <p>
-                        Puddinq is het publicatie platform. Het domein
-                        is bereikbaar via de *.com, *.nl en *.mobi extensie.
-                    </p>
-                    <p>
-                        Op puddinq draaien 3 zelfgeschreven php sites, 2
-                        wordpress sites en 1 cakephp site.
-                    </p>
-
-                    <img src="img/puddinq.JPG" alt="puddinq">
-                    <p class="portfolio-links">
-                        <a href="http://www.puddinq.mobi" target="_blank">
-                            <i class="fa fa-copyright"></i>&nbsp;puddinq.mobi
-                        </a>
-                    </p>
+                    <a href="https://www.anand-roti.nl" target="_blank">
+                    <img src="img/Anand-roti.png" alt="Anand roti.nl">
+                    </a>
                 </div>
             </div>
 
@@ -341,42 +328,58 @@
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
+      <!-- slides -->
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="img/pai.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-                <h1 class="kop">Shop Info plugin voor Wordpress</h1>
-                <p>Shop Info is een plugin waarin informatie over winkels kan worden<br>
-                   opgeslagen en bewerkt</p><br /><br />
-                
-              <p><a class="btn btn-lg btn-primary" href="https://www.puddinq.mobi/scooter/stad/haarlem/" role="button" target="_blank">Bekijk de informatie</a>
-              &nbsp;<a class="btn btn-lg btn-primary" href="https://github.com/wonder32/puddinq_shop_info" role="button" target="_blank">Download de plugin</a></p>
-                <div class="skills-right">
-                    <h2 class="kop">Toegepast</h2>
-                    Wordpress<br />
-                    - action hooks<br />
-                    - custom table<br />
-                    - SQL<br />
-                    
+          <!-- slide 1 active -->
+            <div class="item active">
+              <img src="img/pai.jpg" alt="First slide">
+              <div class="container">
+                <div class="carousel-caption">
+                    <h1 class="kop">Shop Info plugin voor Wordpress</h1>
+                    <p>Shop Info is een plugin waarin informatie over winkels kan worden<br>
+                       opgeslagen en bewerkt</p><br /><br />
+
+                  <p><a class="btn btn-lg btn-primary" href="https://www.puddinq.mobi/scooter/stad/haarlem/" role="button" target="_blank">Bekijk de informatie</a>
+                  &nbsp;<a class="btn btn-lg btn-primary" href="https://github.com/wonder32/puddinq_shop_info" role="button" target="_blank">Download de plugin</a></p>
+                    <div class="skills-right">
+                        <h2 class="kop">Toegepast</h2>
+                        Wordpress<br />
+                        - action hooks<br />
+                        - custom table<br />
+                        - SQL<br />
+
+                    </div>
                 </div>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Puddinq.mobi</h1>
-              <p>Puddinq is het domein waarop ik publiceer. Bij binnenkomst<br />
-                 is een eenvoudig wordpress thema te zien, maar voor wordpress is<br /> 
-                 de site snel en goed te vinden in google.</p><br /><br />
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <!-- slide 2 -->
+            <div class="item">
+              <div class="container">
+                <div class="carousel-caption">
+                  <h1>Puddinq.mobi</h1>
+                  <p>Puddinq is het domein waarop ik publiceer. Bij binnenkomst<br />
+                     is een eenvoudig wordpress thema te zien, maar voor wordpress is<br /> 
+                     de site snel en goed te vinden in google.</p><br /><br />
+                  <p><a class="btn btn-lg btn-primary" href="http://www.puddinq.mobi" role="button">Home</a></p>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </div>
+          <!-- slide 3 -->
+            <div class="item">
+              <img src="img/ar.jpg" alt="Third slide">
+              <div class="container">
+                <div class="carousel-caption">
+                  <h1>Anand-roti.nl</h1>
+                  <p>Anand roti heeft een wordpress site met een responsive thema.
+                  de website is nog in opbouw maar wel al functioneel.</p><br /><br />
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Bekijk</a></p>
+                </div>
+              </div>
+            </div>
+        </div><!-- end of slides -->
+      <!-- navigation prev/ next-->
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
