--- a/view/profiel.twig
+++ b/view/profiel.twig
@@ -1,1 +1,3 @@
-{% include "header.twig" %}{% include "content.twig" %}{% include "footer.twig" %}
+{% include "header.twig" %}
+{% include "content.twig" %}
+{% include "footer.twig" %}
