--- a/view/content.twig
+++ b/view/content.twig
@@ -1,43 +1,9 @@
 <div class="container-fluid wrapper">
-    
-    <!-- HEAD ================================================ -->
-    
-    <div class="row-fluid row heading">
-        <div class="col-md-8">
-            <img class="head-shot" src="img/s.schotvanger.jpg" alt="Foto van Stefan Schotvanger">
-            <h1 class="name"><span itemprop="name">Stefan Schotvanger</span></h1>
-            <h2 class="trade"><span itemprop="jobTitle">Junior PHP Developer</span></h2>
-            <section id="profile">
-            <p class="photo-message" itemprop="description">
-                <span class="glyphicon glyphicon-menu-right"></span>Ik ben een 
-                startende PHP developer op zoek naar een dynamische 
-                werkplek waarin ik een combinatie kan maken van mijn
-                ruime ervaring binnen projecten, economische
-                achtergrond en mijn interesse in applicicatie 
-                ontwikkeling.
-            </p>
-            </section>
-        </div>
-        <div class="col-md-4">
-            <section id="skills" class="clearfix" itemscope itemtype="http://schema.org/ItemList">
-            <h2 class="service" itemprop="about">
-                <span class="glyphicon glyphicon-ok"></span>
-                Diensten
-                <i class="download-cv"><a href="https://www.puddinq.mobi/wip/stefan-schotvanger/CV-Stefan-Schotvanger.doc"><span class="glyphicon glyphicon-download-alt"></span></a></i>
-            </h2>
-            <p itemprop="description">
-                <span class="glyphicon glyphicon-hand-right"></span>
-                Planning & Controll, projectanalyse, PHP applicatie ontwikkeling,
-                Marketing, Coaching en Instructie.
-                
-                
-            </p>
-            </section>
-            
-        </div>
-    </div> <!-- end of HEAD end of row-fluid heading -->
-    <!-- Opleiding en ervaring ==================================== -->  
-    
+
+{% include "head.twig" %}
+
+    <!-- Opleiding en ervaring ==================================== -->
+
     <div class="row-fluid row cv">
         <!-- column 1 -->
         <div class="col-md-4 col-sm-6 ">
@@ -47,42 +13,47 @@
 
             <h4 class="instituut">HAVO Exact pakket</h4>
             <h5 class="plaats-jaar">Kennemer lyceum, Overveen <span class="mijn-info">1993 - 1998</span></h5>
-            
+
             <h3 class="kop">Cursussen</h3>
             <h4 class="instituut">Advanved PHP Programming (INT 506)</h4>
             <h5 class="plaats-jaar">Twice, Utrecht <span class="mijn-info">2013</span></h5>
-            
+
             <h4 class="instituut">PHP Programming (INT 503)</h4>
             <h5 class="plaats-jaar">Twice, Utrecht <span class="mijn-info">2013</span></h5>
-            
+
             <h4 class="instituut">Primavera beheer</h4>
-            <h5 class="plaats-jaar">Primaned, Capelle aan de IJssel <span class="mijn-info">2010</span></h5>            
-        </div>
- 
-        <!-- column 2 -->
-        <div class="col-md-4 col-sm-6">
-            <h3 class="kop">Werkervaring</h3>            
-            <h4 class="instituut">Marketing adviseur</h4>
-            <h5 class="plaats-jaar">ISB, Santpoort <span class="mijn-info">2014</span></h5>
-            
-            <h4 class="instituut">Migratie coördinator</h4>
-            <h5 class="plaats-jaar">Buuv.nu, Haarlem <span class="mijn-info">2013</span></h5>
-            
-            <h4 class="instituut">Planner - risicoanalist</h4>
-            <h5 class="plaats-jaar">Gemeente Haarlem <span class="mijn-info">2008 - 2013</span></h5>
-            
-            <h4 class="instituut">Medewerker bouwtoezicht</h4>
-            <h5 class="plaats-jaar">Gemeente Haarlem <span class="mijn-info">2003 - 2008</span></h5>
-            
-            <h4 class="instituut">Planner</h4>
-            <h5 class="plaats-jaar">Active Koeriers, Haarlem <span class="mijn-info">2000 - 2003</span></h5>
-            
+            <h5 class="plaats-jaar">Primaned, Capelle aan de IJssel <span class="mijn-info">2010</span></h5>
+
             <h3 class="kop">Stages</h3>
             <h4 class="instituut">PHP developer</h4>
-            <h5 class="plaats-jaar">Cyberdots, Hoorn <span class="mijn-info">2014 - heden</span></h5>
-            
+            <h5 class="plaats-jaar">Cyberdots, Hoorn <span class="mijn-info">2014 - 2015</span></h5>
         </div>
-        
+
+        <!-- column 2 -->
+        <div class="col-md-4 col-sm-6">
+            <h3 class="kop">Werkervaring</h3>
+
+            <h4 class="instituut">Web developer</h4>
+            <h5 class="plaats-jaar">New Fountain, Haarlem <span class="mijn-info">april 2014 - heden</span></h5>
+            <h5>PHP, javascript, wordpress, ontwikkeling en beheer</h5>
+
+            <h4 class="instituut">Marketing adviseur</h4>
+            <h5 class="plaats-jaar">ISB, Santpoort <span class="mijn-info">2014</span></h5>
+
+            <h4 class="instituut">Migratie coördinator</h4>
+            <h5 class="plaats-jaar">Buuv.nu, Haarlem <span class="mijn-info">2013</span></h5>
+
+            <h4 class="instituut">Planner - risicoanalist</h4>
+            <h5 class="plaats-jaar">Gemeente Haarlem <span class="mijn-info">2008 - 2013</span></h5>
+
+            <h4 class="instituut">Medewerker bouwtoezicht</h4>
+            <h5 class="plaats-jaar">Gemeente Haarlem <span class="mijn-info">2003 - 2008</span></h5>
+
+            <h4 class="instituut">Planner</h4>
+            <h5 class="plaats-jaar">Active Koeriers, Haarlem <span class="mijn-info">2000 - 2003</span></h5>
+
+        </div>
+
         <!-- column 3 -->
         <div class="col-md-4 col-sm-6">
         <h3 class="kop">Programmeer vaardigheden</h3>
@@ -105,17 +76,17 @@
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
-                                
+
             <h4 class="skill">
                 Javascript & Jquery
                 <span class="mijn-info small-star">
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
-                                                  
+
         <h3 class="kop">Grafische vaardigheden</h3>
 
             <h4 class="skill">
@@ -127,7 +98,7 @@
                     <i class="fa fa-star-half"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
- 
+
             <h4 class="skill">
                 Dreamweaver
                 <span class="mijn-info small-star">
@@ -137,8 +108,8 @@
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
-            
-            
+
+
         <h3 class="kop">Software en Systemen</h3>
 
             <h4 class="skill">
@@ -150,7 +121,7 @@
                     <i class="fa fa-star-half"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
-        
+
             <h4 class="skill">
                 Git
                 <span class="mijn-info small-star">
@@ -160,7 +131,7 @@
                     <i class="fa fa-star-half"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
-        
+
              <h4 class="skill">
                 Composer & Less
                 <span class="mijn-info small-star">
@@ -169,8 +140,8 @@
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
-                </span></h4> 
-        
+                </span></h4>
+
              <h4 class="skill">
                 Wordpress & Cake
                 <span class="mijn-info small-star">
@@ -179,23 +150,23 @@
                     <i class="fa fa-star-half"></i>
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
-                </span></h4>       
+                </span></h4>
         </div>
-        
-    
+
+
     </div> <!-- eind cv -->
-     <!-- Google maps ============================================== -->    
+     <!-- Google maps ============================================== -->
     <h3 class="kop lokatie">Lokatie</h3>
-    
+
     <section id="cd-google-map">
 	<div id="google-container"></div>
         <div id="cd-zoom-in"><span id="zoom"></span></div>
 	<div id="cd-zoom-out"><span id="zoom"></span></div>
-	<address>Denemarkenstraat 53, Haarlem, 2034 AB</address> 
+	<address>Denemarkenstraat 53, Haarlem, 2034 AB</address>
     </section>
-    
+
     <!-- Contact ================================================== -->
-                        
+
     <div class="row-fluid contact">
 
         <!--column 1 -->
@@ -309,7 +280,7 @@
                     <img src="img/CV.png" alt="stefan schotvanger cv">
                 </div>
             </div>
-            
+
             <div class="portfolio-item">
                 <div class="portfolio-details">
                     <a href="https://www.anand-roti.nl" target="_blank">
@@ -321,7 +292,7 @@
         </div><!-- end of portfolio -->
 
 
-    <!-- Portfolio - showcase ======================================= -->  
+    <!-- Portfolio - showcase ======================================= -->
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="12000">
       <!-- Indicators -->
@@ -360,7 +331,7 @@
                 <div class="carousel-caption">
                   <h1>Puddinq.mobi</h1>
                   <p>Puddinq is het domein waarop ik publiceer. Bij binnenkomst<br />
-                     is een eenvoudig wordpress thema te zien, maar voor wordpress is<br /> 
+                     is een eenvoudig wordpress thema te zien, maar voor wordpress is<br />
                      de site snel en goed te vinden in google.</p><br /><br />
                   <p><a class="btn btn-lg btn-primary" href="http://www.puddinq.mobi" role="button">Home</a></p>
                 </div>
@@ -390,6 +361,4 @@
       </a>
     </div><!-- /.carousel -->
 
-</div> <!-- end of container (fluid wrapper)) -->    
-
-    
+</div> <!-- end of container (fluid wrapper)) -->
