--- a/view/content.twig
+++ b/view/content.twig
@@ -339,12 +339,12 @@
             </div>
           <!-- slide 3 -->
             <div class="item">
-              <img src="img/ar.jpg" alt="Third slide">
+              <img src="img/ar.jpg" alt="Third slide" class="image-carousel">
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Anand-roti.nl</h1>
-                  <p>Anand roti heeft een wordpress site met een responsive thema.
-                  de website is nog in opbouw maar wel al functioneel.</p><br /><br />
+                  <p>Anand roti heeft een wordpress site met een responsive thema. De website is nog<br />
+                  in opbouw maar wel al functioneel.</p><br /><br />
                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Bekijk</a></p>
                 </div>
               </div>
