--- a/view/content.twig
+++ b/view/content.twig
@@ -7,7 +7,7 @@
     <div class="row-fluid row cv">
         <!-- column 1 -->
         <div class="col-md-4 col-sm-6 ">
-            <h3 class="kop">Opleidingen</h3>
+            <h3 class="kop">Opleidingen 1</h3>
             <h4 class="instituut">Bachelor Commerciële Economie</h4>
             <h5 class="plaats-jaar">InHolland, Haarlem <span class="mijn-info">2003 - 2008</span></h5>
 
