--- a/view/content.twig
+++ b/view/content.twig
@@ -239,7 +239,7 @@
             <h4 class="my-info">
                 <i class="fa fa-linkedin"></i>
                     <span class="mijn-info">
-                        <a href="https://nl.linkedin.com/pub/stefan-schotvanger">Linkedin</a>
+                        <a href="https://nl.linkedin.com/in/stefan-schotvanger-188b1373">Linkedin</a>
                     </span>
                 <br /><br />
             </h4>
@@ -283,7 +283,7 @@
 
             <div class="portfolio-item">
                 <div class="portfolio-details">
-                    <a href="https://www.anand-roti.nl" target="_blank">
+                    <a href="#" target="_blank">
                     <img src="img/Anand-roti.png" alt="Anand roti.nl">
                     </a>
                 </div>
@@ -312,7 +312,7 @@
                     <p>Shop Info is een plugin waarin informatie over winkels kan worden<br>
                        opgeslagen en bewerkt</p><br /><br />
 
-                  <p><a class="btn btn-lg btn-primary" href="https://www.puddinq.mobi/scooter/stad/haarlem/" role="button" target="_blank">Bekijk de informatie</a>
+                  <p><a class="btn btn-lg btn-primary" href="#" role="button" target="_blank">Bekijk de informatie</a>
                   &nbsp;<a class="btn btn-lg btn-primary" href="https://github.com/wonder32/puddinq_shop_info" role="button" target="_blank">Download de plugin</a></p>
                     <div class="skills-right">
                         <h2 class="kop">Toegepast</h2>
