--- a/view/content.twig
+++ b/view/content.twig
@@ -63,8 +63,8 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half"></i>
                 </span></h4>
 
             <h4 class="skill">
@@ -73,8 +73,8 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half"></i>
                 </span></h4>
 
             <h4 class="skill">
@@ -83,8 +83,8 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half"></i>
                 </span></h4>
 
         <h3 class="kop">Grafische vaardigheden</h3>
@@ -113,13 +113,13 @@
         <h3 class="kop">Software en Systemen</h3>
 
             <h4 class="skill">
-                Netbeans IDE
+                PhpStorm IDE
                 <span class="mijn-info small-star">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                     <i class="fa fa-star-half"></i>
-                    <i class="fa fa-star-o"></i>
                 </span></h4>
 
             <h4 class="skill">
@@ -137,17 +137,27 @@
                 <span class="mijn-info small-star">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </span></h4>
-
-             <h4 class="skill">
-                Wordpress & Cake
-                <span class="mijn-info small-star">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half"></i>
+                </span></h4>
+
+             <h4 class="skill">
+                Wordpress
+                <span class="mijn-info small-star">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </span></h4>
+
+            <h4 class="skill">
+                Laravel
+                <span class="mijn-info small-star">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
                     <i class="fa fa-star-o"></i>
                 </span></h4>
@@ -193,7 +203,7 @@
 
             <h4 class="my-info">
                 <span class="glyphicon glyphicon-signal"></span> Mobiel
-                <span class="mijn-info"><span itemprop="telephone">06 1432 9070</span></span>
+                <span class="mijn-info"><span itemprop="telephone">06 3805 9189</span></span>
             </h4>
 
             <h4 class="my-info">
@@ -215,13 +225,7 @@
         <div class="col-md-4">
 
             <h3 class="kop">Volg mij</h3>
-            <h4 class="my-info">
-                <i class="fa fa-google-plus"></i>
-                    <span class="mijn-info">
-                    <a href="https://plus.google.com/115585877238866188155" target="_blank">Google +</a>
-                    </span>
-                <br />
-            </h4>
+
             <h4 class="my-info">
                 <i class="fa fa-facebook"></i>
                     <span class="mijn-info">
@@ -248,23 +252,26 @@
 
     </div><!-- end of contact -->
 
-            <!-- Portfolio ================================================== -->
+    <!-- Portfolio ================================================== -->
     <div class="clearfix"></div>
     <h3 class="kop">Portfolio</h3>
-
+        <!-- puddinq ================================================== -->
         <div id="portfolio">
            <div class="portfolio-item">
                 <img src="img/login_logo.jpg" alt="puddinq logo">
                 <div class="portfolio-details">
-                    <h4>Puddinq.mobi</h4>
+                    <h4>Puddinq</h4>
                     <p>
-                        Puddinq is het publicatie platform. Het domein
-                        is bereikbaar via de *.com, *.nl en *.mobi extensie.
+                        De basis achter alle puddinq websites, de eerste en de meest experimentele.
                     </p>
                     <p>
-                        Op puddinq draaien 3 zelfgeschreven php sites, 2
-                        wordpress sites en 1 cakephp site.
+                        Directe puddinq websites zijn:
                     </p>
+                    <ul>
+                        <li><a href="https://www.puddinq.mobi" title="bekijk puddinq.mobi">Puddinq.mobi</a></li>
+                        <li><a href="https://www.puddinq.nl" title="bekijk puddinq.nl">Puddinq.nl</a></li>
+                        <li><a href="https://www.puddinq.com" title="bekijk puddinq.com">Puddinq.com</a></li>
+                    </ul>
 
                     <img src="img/puddinq.JPG" alt="puddinq">
                     <p class="portfolio-links">
@@ -275,90 +282,156 @@
                 </div>
             </div>
 
-            <div class="portfolio-item">
+        <!-- puddinq.com ================================================== -->
+           <div class="portfolio-item">
+                <img src="img/puddinq-com.png" alt="puddinq.com site">
                 <div class="portfolio-details">
-                    <img src="img/CV.png" alt="stefan schotvanger cv">
+                    <h4>Puddinq.com</h4>
+                    <p>
+                        Puddinq.com is the fastest, made to archive snippets and
+                        information for developing WordPress sites.
+                    </p>
+                </div>
+               <img src="img/puddinq-com-speed.png" alt="puddinq.com site">
+               <div class="portfolio-details">
+                    <p>
+                        Internationally orientated this site is multi lingual cdn cached
+                    </p>
+                    <p class="portfolio-links">
+                        <a href="https://www.puddinq.com" target="_blank" title="puddinq.com">
+                            <i class="fa fa-copyright"></i>&nbsp;puddinq.com
+                        </a>
+                    </p>
                 </div>
             </div>
 
-            <div class="portfolio-item">
+        <!-- puddinq.mobi ================================================== -->
+           <div class="portfolio-item">
+                <img src="img/puddinq-mobi.png" alt="puddinq.mobi site">
                 <div class="portfolio-details">
-                    <a href="#" target="_blank">
-                    <img src="img/Anand-roti.png" alt="Anand roti.nl">
-                    </a>
+                    <h4>Puddinq.mobi</h4>
+                    <p>
+                        Puddnq.mobi biedt op het moment een mobiele applicatie die
+                        het mogelijk maakt vergunningen, kadastrale kaarten en luchtfoto's weer te geven.
+                    </p>
+                    <p>
+                        Puddnq.mobi biedt op het moment een mobiele applicatie die
+                        het mogelijk maakt vergunningen, kadastrale kaarten en luchtfoto's weer te geven.
+                    </p>
+                    <ul>
+                        <li>Node.js</li>
+                        <li>Open layers</li>
+                        <li>Open data</li>
+                        <li>Multiple api's</li>
+                    </ul>
+
+                    <p class="portfolio-links">
+                        <a href="https://www.puddinq.mobi" target="_blank">
+                            <i class="fa fa-copyright"></i>&nbsp;puddinq.mobi
+                        </a>
+                    </p>
                 </div>
             </div>
 
         </div><!-- end of portfolio -->
 
-
-    <!-- Portfolio - showcase ======================================= -->
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="12000">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <!-- slides -->
-      <div class="carousel-inner" role="listbox">
-          <!-- slide 1 active -->
-            <div class="item active">
-              <img src="img/pai.jpg" alt="First slide">
-              <div class="container">
-                <div class="carousel-caption">
-                    <h1 class="kop">Shop Info plugin voor Wordpress</h1>
-                    <p>Shop Info is een plugin waarin informatie over winkels kan worden<br>
-                       opgeslagen en bewerkt</p><br /><br />
-
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button" target="_blank">Bekijk de informatie</a>
-                  &nbsp;<a class="btn btn-lg btn-primary" href="https://github.com/wonder32/puddinq_shop_info" role="button" target="_blank">Download de plugin</a></p>
-                    <div class="skills-right">
-                        <h2 class="kop">Toegepast</h2>
-                        Wordpress<br />
-                        - action hooks<br />
-                        - custom table<br />
-                        - SQL<br />
-
-                    </div>
+    <!-- winkel-centrum.nl ================================================== -->
+           <div class="portfolio-item">
+                <img src="img/winkel-centrum.png" alt="winkel-centrum.nl site">
+                <div class="portfolio-details">
+                    <h4>winkel-centrum.nl</h4>
+                    <p>
+                        Who ever said WooCommerce is slow, just never saw a fast version.
+                    </p>
+                    <p>
+                        Winkel-centrum.nl is an affiliated woocommerce website with lots of products, and growing.
+                    </p>
+                    <p class="portfolio-links">
+                        <a href="https://www.winkel-centrum.nl" target="_blank">
+                            <i class="fa fa-copyright"></i>&nbsp;winkel-centrum.nl
+                        </a>
+                    </p>
                 </div>
-              </div>
             </div>
-          <!-- slide 2 -->
-            <div class="item">
-              <div class="container">
-                <div class="carousel-caption">
-                  <h1>Puddinq.mobi</h1>
-                  <p>Puddinq is het domein waarop ik publiceer. Bij binnenkomst<br />
-                     is een eenvoudig wordpress thema te zien, maar voor wordpress is<br />
-                     de site snel en goed te vinden in google.</p><br /><br />
-                  <p><a class="btn btn-lg btn-primary" href="http://www.puddinq.mobi" role="button">Home</a></p>
-                </div>
-              </div>
-            </div>
-          <!-- slide 3 -->
-            <div class="item">
-              <img src="img/ar.jpg" alt="Third slide" class="image-carousel">
-              <div class="container">
-                <div class="carousel-caption">
-                  <h1>Anand-roti.nl</h1>
-                  <p>Anand roti heeft een wordpress site met een responsive thema. De website is nog<br />
-                  in opbouw maar wel al functioneel.</p><br /><br />
-                  <p><a class="btn btn-lg btn-primary" href="#" role="button">Bekijk</a></p>
-                </div>
-              </div>
-            </div>
-        </div><!-- end of slides -->
-      <!-- navigation prev/ next-->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
+
+    <!-- gpldownloads.nl ================================================== -->
+    <div class="portfolio-item">
+        <img src="img/gpldownloads.png" alt="gpldownloads.nl site">
+        <div class="portfolio-details">
+            <h4>gpldownloads.nl</h4>
+            <p>
+                Opensource software can cost money, but is allowed to resell.
+            </p>
+            <p>
+                Gpldownloads makes older versions of opensource software available for rollbacks and development purposes.
+            </p>
+            <p class="portfolio-links">
+                <a href="https://www.gpldownloads.nl" target="_blank">
+                    <i class="fa fa-copyright"></i>&nbsp;gpldownloads.nl
+                </a>
+            </p>
+        </div>
+    </div>
+
+
+    <!-- motorfietsen.nu ================================================== -->
+    <div class="portfolio-item">
+        <img src="img/motorfietsennu.png" alt="motorfietsen.nu site">
+        <div class="portfolio-details">
+            <h4>motorfietsen.nu</h4>
+            <p>
+                Pushing WordPress, this site has 750.000 pages and will probably have 1.000.000 when I am done,
+                includes WooCommerce and runs on the cheapest server alive: a raspberry pi on a basic internet home connection.
+                Build just to prove scalability does not need expensive hosting.
+            </p>
+            <p>
+                Winkel-centrum.nl is an affiliated woocommerce website with lots of products, and growing.
+            </p>
+            <p class="portfolio-links">
+                <a href="https://www.motorfietsen.nu" target="_blank">
+                    <i class="fa fa-copyright"></i>&nbsp;motorfietsen.nu
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <!-- puddinq.nl ================================================== -->
+    <div class="portfolio-item">
+        <img src="img/puddinqnl.png" alt="puddinq.nl site">
+        <div class="portfolio-details">
+            <h4>puddinq.nl</h4>
+            <p>
+                The predecessor for puddinq.com, puddinq.nl still has some pages that have traffic on the dutch content.
+            </p>
+            <p>
+                The project is not abandoned and still maintained, but there is no new content. Super fast 300 ms
+            </p>
+            <p class="portfolio-links">
+                <a href="https://www.puddinq.nl" target="_blank">
+                    <i class="fa fa-copyright"></i>&nbsp;puddinq.nl
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <!-- rlsd.nl ================================================== -->
+    <div class="portfolio-item">
+        <img src="img/rlsd.png" alt="rlsd.nl site">
+        <div class="portfolio-details">
+            <h4>rlsd.nl</h4>
+            <p>
+                As the funny project started a website for real life sex dolls
+            </p>
+            <p>
+                Still a work in progress,.. just start laughing each time which makes me go and something else.
+            </p>
+            <p class="portfolio-links">
+                <a href="https://www.rlsd.nl" target="_blank">
+                    <i class="fa fa-copyright"></i>&nbsp;rlsd.nl
+                </a>
+            </p>
+        </div>
+    </div>
+        </div><!-- end of portfolio -->
 
 </div> <!-- end of container (fluid wrapper)) -->
