--- a/view/head.twig
+++ b/view/head.twig
@@ -8,11 +8,9 @@
         <h2 class="trade"><span itemprop="jobTitle">Junior PHP Developer</span></h2>
         <p class="photo-message" itemprop="description">
             <span class="glyphicon glyphicon-menu-right"></span>
-            Ik ben een startende Web developer bij New
-            Fountain in Haarlem.
-
-            Daar werk ik voornamelijk aan de backend met
-            een korte lijn naar de frontend.
+            Een ervaren backend developer bij New Fountain waar ik werk met WordPress, WooCommerce, big data, php, javascript, composer, git, sass, mysql, nginx, apache, hosting en meer.<br><br>
+            Buiten het werk ervaring met affiliated marketing, MVC frameworks, RaspBerry Pi, Wamp, Linux.<br><br>
+            <b>Motto:</b> Why do it manually if you can automate it
         </p>
         </section>
     </div>
@@ -20,17 +18,26 @@
         <section id="skills" class="clearfix" itemscope itemtype="http://schema.org/ItemList">
         <h2 class="service" itemprop="about">
             <span class="glyphicon glyphicon-ok"></span>
-            Diensten
-            <i class="download-cv"><a href="https://www.puddinq.mobi/wip/stefan-schotvanger/CV-Stefan-Schotvanger.doc"><span class="glyphicon glyphicon-download-alt"></span></a></i>
+            Eigenschappen:
+            <i class="download-cv"><a href="https://www.puddinq.mobi/wip/stefan-schotvanger/img/cv-stefan-schotvanger.pdf"><span class="glyphicon glyphicon-download-alt"></span></a></i>
         </h2>
         <p itemprop="description">
-            <span class="glyphicon glyphicon-hand-right"></span>
-            Planning & Controll, projectanalyse, PHP applicatie ontwikkeling,
-            Marketing, Coaching en Instructie.
-
-
+            <span class="glyphicon glyphicon-hand-right"></span> Teamplayer<br>
+            <span class="glyphicon glyphicon-hand-right"></span> Analytisch<br>
+            <span class="glyphicon glyphicon-hand-right"></span> Algebra<br>
+            <span class="glyphicon glyphicon-hand-right"></span> Out of the box denken<br>
         </p>
         </section>
-
+        <h2 class="service" itemprop="about">
+            <span class="glyphicon glyphicon-ok"></span>
+            Interesses:
+        </h2>
+        <p itemprop="description">
+            <span class="glyphicon glyphicon-hand-right"></span> Scifi<br>
+            <span class="glyphicon glyphicon-hand-right"></span> UK<br>
+            <span class="glyphicon glyphicon-hand-right"></span> Economie<br>
+            <span class="glyphicon glyphicon-hand-right"></span> Motor rijden<br>
+        </p>
+        </section>
     </div>
 </div> <!-- end of HEAD end of row-fluid heading -->
