--- a/view/head.twig
+++ b/view/head.twig
@@ -10,7 +10,14 @@
             <span class="glyphicon glyphicon-menu-right"></span>
             Een ervaren backend developer bij New Fountain waar ik werk met WordPress, WooCommerce, big data, php, javascript, composer, git, sass, mysql, nginx, apache, hosting en meer.<br><br>
             Buiten het werk ervaring met affiliated marketing, MVC frameworks, RaspBerry Pi, Wamp, Linux.<br><br>
-            <b>Motto:</b> Why do it manually if you can automate it
+            <b>Motto:</b> Why do it manually if you can automate it<br>
+            New Fountain werk:
+            <ul>
+                <li><a href="https://www.brommer.nl/" title="Brommer.nl" target="_blank">Brommer.nl</a> - 1.420.000 pagina's in WordPress</li>
+                <li><a href="https://www.monnikendam.nl/" title="Brommer.nl" target="_blank">Monnikendam.nl</a> - Met kassa koppeling en verzendlabels</li>
+                <li><a href="https://www.sportkadernederland.nl/maak-uw-eigen-berekening/" title="Sportkadernederland" target="_blank">Sportkadernederland.nl</a> - bruto - netto // netto bruto loonberekening</li>
+                <li>etc.</li>
+            </ul>
         </p>
         </section>
     </div>
