--- a/view/head.twig
+++ b/view/head.twig
@@ -5,7 +5,7 @@
         <section id="profile">
         <img class="head-shot" src="img/s.schotvanger.jpg" alt="Foto van Stefan Schotvanger">
         <h1 class="name"><span itemprop="name">Stefan Schotvanger</span></h1>
-        <h2 class="trade"><span itemprop="jobTitle">Junior PHP Developer</span></h2>
+        <h2 class="trade"><span itemprop="jobTitle">PHP Developer</span></h2>
         <p class="photo-message" itemprop="description">
             <span class="glyphicon glyphicon-menu-right"></span>
             Een ervaren backend developer bij New Fountain waar ik werk met WordPress, WooCommerce, big data, php, javascript, composer, git, sass, mysql, nginx, apache, hosting en meer.<br><br>
