--- a/view/header.twig
+++ b/view/header.twig
@@ -19,7 +19,7 @@
     <meta property="og:type:profile:username" content="s.schotvanger" />
     <meta property="og:type:profile:gender" content="male" />
     <meta property="og:title" content="Stefan Schotvanger" />
-    <meta property="og:description" content="Stefan Schotvanger, In 2013 heb ik een opleiding gevolgd om mijn php hobbykennis naar een hoger niveau te brengen. In 2014 wil ik deze kennis uitbreiden.." />
+    <meta property="og:description" content="Een ervaren backend developer bij New Fountain waar ik werk met WordPress, WooCommerce, big data, php, javascript, composer, git, sass, mysql, nginx, apache, hosting en meer." />
     <meta property="og:url" content="https://www.puddinq.mobi/wip/profiel/" />
     <meta property="og:site_name" content="puddinq" />
     <meta property="article:published_time" content="2014-10-04T10:37:01+00:00" />
