--- a/view/header.twig
+++ b/view/header.twig
@@ -25,6 +25,7 @@
     <meta property="article:published_time" content="2014-10-04T10:37:01+00:00" />
     <meta property="article:modified_time" content="2015-02-05T20:10:21+00:00" />
     <meta property="og:updated_time" content="2014-12-09T10:08:18+00:01" />
+    <meta property="og:image" content="https://www.puddinq.nl/wip/stefan-schotvanger/img/s_schotvanger.jpg" />
     <meta property="og:image:secure_url" content="https://www.puddinq.nl/wip/stefan-schotvanger/img/s_schotvanger.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="892" />
