--- a/view/header.twig
+++ b/view/header.twig
@@ -31,6 +31,14 @@
     <meta property="og:image:width" content="892" />
     <meta property="og:image:height" content="1312" />
 
+<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.puddinq.nl/content/uploads/analytics.js','ga');
+
+            ga('create', 'UA-43799646-2', 'auto');
+                        ga('send', 'pageview');</script>
+
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/profile.css">
